# protontweaks

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  flake.nix  shell.nix
.github/workflows/: ci.yml  tweaks.yml
nix/: home-manager.nix  nixos.nix  protontweaks.nix
nix/pkgs/: protontweaks.nix
src/: config.rs  main.rs
src/apps/: mod.rs
src/commands/: default.rs  edit.rs  info.rs  list.rs  mod.rs  run.rs  service.rs  setup.rs  uninstall.rs  watch.rs
src/tweaks/: mod.rs
src/utils/: command.rs  env.rs  gamemode.rs  mangohud.rs  mod.rs  nix_shell.rs  service.rs
src/utils/commands/: mod.rs  nix_shell.rs
src/utils/commands/protontricks/: install.rs  list.rs  mod.rs
src/utils/protontricks/: install.rs  list.rs  mod.rs
src/utils/steam/: mod.rs
tweaks/: .template.json  644930.json  README.md
