[package]
name = "protontweaks"
description = "crowdsourced protontricks"
license = "MIT"
authors = ["Cecilia Sanare <ceci@sanare.dev>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.21"
owo-colors = "4.0.0"
pretty_env_logger = "0.5.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[build-dependencies]
chrono = "0.4.34"
