[package]
name = "protontweaks"
description = "Crowdsourced tweaks for Steam!"
license = "MIT"
authors = ["Cecilia Sanare <ceci@sanare.dev>"]
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
home = "0.5.9"
keyvalues-parser = "0.2.0"
keyvalues-serde = "0.2.1"
log = "0.4.21"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
owo-colors = "4.0.0"
pretty_env_logger = "0.5.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
rust_search = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha256 = "1.5.0"
shlex = "1.3.0"

[build-dependencies]
chrono = "0.4.34"
