[package]
name = "protontweaks"
description = "Crowdsourced tweaks for Steam!"
license = "MIT"
authors = ["Cecilia Sanare <ceci@sanare.dev>"]
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.1.0"
clap = { version = "4.5.1", features = ["derive"] }
cli_prompts_rs = { version = "0.3.0", features = ["unstable"] }
futures = "0.3.30"
home = "0.5.9"
keyvalues-parser = "0.2.0"
keyvalues-serde = "0.2.1"
log = "0.4.21"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
os_info = "3.8.1"
owo-colors = "4.0.0"
pretty_env_logger = "0.5.0"
protontweaks-api = "0.3.0"
regex = "1.10.3"
rust_search = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
service-manager = "0.6.0"
sha256 = "1.5.0"
shlex = "1.3.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
chrono = "0.4.34"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/protontweaks", dest = "/usr/bin/protontweaks", mode = "755" },
]
